# BotC

./: BotC.py  BotC2.py  Master_BotC.json
Resources/: icon_scraper.py
cpp/: BluffSelectionDialog.cpp  BluffSelectionDialog.h  CMakeLists.txt  CharacterSelectionDialog.cpp  CharacterSelectionDialog.h  Makefile  main.cpp  storyteller.cpp  storyteller.h
